Prueba de error

--- a/Pages/servicios.html
+++ b/Pages/servicios.html
@@ -21,7 +21,9 @@
       <div class="col-md">
         <nav class="navbar navbar-expand-md bg-light">
           <div class="container-fluid">
-            <a href="/"><img class="logonav" src="../Fotos/AZ.png" alt="" /></a>
+            <a href="/ProyectoFinalCoderHouse/"
+              ><img class="logonav" src="../Fotos/AZ.png" alt=""
+            /></a>
             <button
               class="navbar-toggler"
               type="button"
