--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="../JS/bootstrap.js"></script>
+    <script src="/ProyectoFinalCoderHouse/JS/bootstrap.js"></script>
     <title>AZCatering</title>
-    <link rel="shortcut icon" href="../Fotos/AZ.png" type="image/x-icon" />
-    <link rel="stylesheet" href="../css/bootstrap.css" />
-    <link rel="stylesheet" href="../css/style.css" />
+    <link
+      rel="shortcut icon"
+      href="/ProyectoFinalCoderHouse/Fotos/AZ.png"
+      type="image/x-icon"
+    />
+    <link rel="stylesheet" href="/ProyectoFinalCoderHouse/css/bootstrap.css" />
+    <link rel="stylesheet" href="/ProyectoFinalCoderHouse/css/style.css" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css"
@@ -21,7 +25,9 @@
       <div class="col-md">
         <nav class="navbar navbar-expand-md bg-light">
           <div class="container-fluid">
-            <a href="/"><img class="logonav" src="Fotos/AZ.png" alt="" /></a>
+            <a href="/ProyectoFinalCoderHouse/"
+              ><img class="logonav" src="Fotos/AZ.png" alt=""
+            /></a>
             <button
               class="navbar-toggler"
               type="button"
@@ -39,16 +45,32 @@
                   <a class="nav-link" href="/">Inicio </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/Pages/servicios.html">Servicios</a>
+                  <a
+                    class="nav-link"
+                    href="/ProyectoFinalCoderHouse/Pages/servicios.html"
+                    >Servicios</a
+                  >
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/Pages/galeria.html">Galeria</a>
+                  <a
+                    class="nav-link"
+                    href="/ProyectoFinalCoderHouse/Pages/galeria.html"
+                    >Galeria</a
+                  >
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/Pages/nosotros.html">Nosotros</a>
+                  <a
+                    class="nav-link"
+                    href="/ProyectoFinalCoderHouse/Pages/nosotros.html"
+                    >Nosotros</a
+                  >
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/Pages/contacto.html">Contacto</a>
+                  <a
+                    class="nav-link"
+                    href="/ProyectoFinalCoderHouse/Pages/contacto.html"
+                    >Contacto</a
+                  >
                 </li>
               </ul>
             </div>
@@ -69,21 +91,21 @@
           <div class="carousel-inner">
             <div class="carousel-item active">
               <img
-                src="Fotos/Foto Carro 1.jpg"
+                src="/ProyectoFinalCoderHouse/Fotos/Foto Carro 1.jpg"
                 class="d-block w-100"
                 alt="..."
               />
             </div>
             <div class="carousel-item">
               <img
-                src="Fotos/Foto Carro 2.jpg"
+                src="/ProyectoFinalCoderHouse/Fotos/Foto Carro 2.jpg"
                 class="d-block w-100"
                 alt="..."
               />
             </div>
             <div class="carousel-item">
               <img
-                src="Fotos/Foto Carro 3.jpg"
+                src="/ProyectoFinalCoderHouse/Fotos/Foto Carro 3.jpg"
                 class="d-block w-100"
                 alt="..."
               />
@@ -120,27 +142,33 @@
             <div class="col-6 col-md-2 mb-3">
               <ul class="nav flex-column">
                 <li class="nav-item mb-2">
-                  <a href="index.html" class="nav-link p-0 text-muted"
-                    >Inicio</a
-                  >
+                  <a href="/" class="nav-link p-0 text-muted">Inicio</a>
                 </li>
                 <li class="nav-item mb-2">
-                  <a href="Pages/Servicios.html" class="nav-link p-0 text-muted"
+                  <a
+                    href="/ProyectoFinalCoderHouse/Pages/Servicios.html"
+                    class="nav-link p-0 text-muted"
                     >Servicios</a
                   >
                 </li>
                 <li class="nav-item mb-2">
-                  <a href="Pages/Galeria.html" class="nav-link p-0 text-muted"
+                  <a
+                    href="/ProyectoFinalCoderHouse/Pages/Galeria.html"
+                    class="nav-link p-0 text-muted"
                     >Galeria</a
                   >
                 </li>
                 <li class="nav-item mb-2">
-                  <a href="Pages/Nosotros.html" class="nav-link p-0 text-muted"
+                  <a
+                    href="/ProyectoFinalCoderHouse/Pages/Nosotros.html"
+                    class="nav-link p-0 text-muted"
                     >Nosotros</a
                   >
                 </li>
                 <li class="nav-item mb-2">
-                  <a href="Pages/Contacto.html" class="nav-link p-0 text-muted"
+                  <a
+                    href="/ProyectoFinalCoderHouse/Pages/Contacto.html"
+                    class="nav-link p-0 text-muted"
                     >Contacto</a
                   >
                 </li>
