Arreglo errores de linkeo

--- a/Pages/nosotros.html
+++ b/Pages/nosotros.html
@@ -4,11 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="../JS/bootstrap.js"></script>
+    <script src="/ProyectoFinalCoderHouse/JS/bootstrap.js"></script>
     <title>AZCatering</title>
-    <link rel="shortcut icon" href="../Fotos/AZ.png" type="image/x-icon" />
-    <link rel="stylesheet" href="../css/bootstrap.css" />
-    <link rel="stylesheet" href="../css/style.css" />
+    <link
+      rel="shortcut icon"
+      href="/ProyectoFinalCoderHouse/Fotos/AZ.png"
+      type="image/x-icon"
+    />
+    <link rel="stylesheet" href="/ProyectoFinalCoderHouse/css/bootstrap.css" />
+    <link rel="stylesheet" href="/ProyectoFinalCoderHouse/css/style.css" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css"
@@ -21,7 +25,12 @@
       <div class="col-md">
         <nav class="navbar navbar-expand-md bg-light">
           <div class="container-fluid">
-            <a href="/"><img class="logonav" src="../Fotos/AZ.png" alt="" /></a>
+            <a href="/ProyectoFinalCoderHouse/"
+              ><img
+                class="logonav"
+                src="/ProyectoFinalCoderHouse/Fotos/AZ.png"
+                alt=""
+            /></a>
             <button
               class="navbar-toggler"
               type="button"
@@ -39,16 +48,32 @@
                   <a class="nav-link" href="/">Inicio </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/Pages/servicios.html">Servicios</a>
+                  <a
+                    class="nav-link"
+                    href="/ProyectoFinalCoderHouse/Pages/servicios.html"
+                    >Servicios</a
+                  >
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/Pages/galeria.html">Galeria</a>
+                  <a
+                    class="nav-link"
+                    href="/ProyectoFinalCoderHouse/Pages/galeria.html"
+                    >Galeria</a
+                  >
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/Pages/nosotros.html">Nosotros</a>
+                  <a
+                    class="nav-link"
+                    href="/ProyectoFinalCoderHouse/Pages/nosotros.html"
+                    >Nosotros</a
+                  >
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/Pages/contacto.html">Contacto</a>
+                  <a
+                    class="nav-link"
+                    href="/ProyectoFinalCoderHouse/Pages/contacto.html"
+                    >Contacto</a
+                  >
                 </li>
               </ul>
             </div>
@@ -72,7 +97,7 @@
           <div class="col-md-3 col-12">
             <div class="feature feature-4">
               <img
-                src="/Fotos/Team/nuestro-equipo-ok-1.png"
+                src="/ProyectoFinalCoderHouse/Fotos/Team/nuestro-equipo-ok-1.png"
                 alt=""
                 class="feature-img img-full-width"
               />
@@ -90,7 +115,7 @@
           <div class="col-md-3 col-12">
             <div class="feature feature-4">
               <img
-                src="/Fotos/Team/nuestro-equipo-ok-2.png"
+                src="/ProyectoFinalCoderHouse/Fotos/Team/nuestro-equipo-ok-2.png"
                 alt=""
                 class="feature-img img-full-width"
               />
@@ -108,7 +133,7 @@
           <div class="col-md-3 col-12">
             <div class="feature feature-4">
               <img
-                src="/Fotos/Team/nuestro-equipo-ok-3.png"
+                src="/ProyectoFinalCoderHouse/Fotos/Team/nuestro-equipo-ok-3.png"
                 alt=""
                 class="feature-img img-full-width"
               />
@@ -126,7 +151,7 @@
           <div class="col-md-3 col-12">
             <div class="feature feature-4">
               <img
-                src="/Fotos/Team/nuestro-equipo-ok-4.png"
+                src="/ProyectoFinalCoderHouse/Fotos/Team/nuestro-equipo-ok-4.png"
                 alt=""
                 class="feature-img img-full-width"
               />
@@ -153,27 +178,33 @@
             <div class="col-6 col-md-2 mb-3">
               <ul class="nav flex-column">
                 <li class="nav-item mb-2">
-                  <a href="../index.html" class="nav-link p-0 text-muted"
-                    >Inicio</a
-                  >
+                  <a href="/" class="nav-link p-0 text-muted">Inicio</a>
                 </li>
                 <li class="nav-item mb-2">
-                  <a href="Servicios.html" class="nav-link p-0 text-muted"
+                  <a
+                    href="/ProyectoFinalCoderHouse/Pages/servicios.html"
+                    class="nav-link p-0 text-muted"
                     >Servicios</a
                   >
                 </li>
                 <li class="nav-item mb-2">
-                  <a href="Galeria.html" class="nav-link p-0 text-muted"
+                  <a
+                    href="/ProyectoFinalCoderHouse/Pages/galeria.html"
+                    class="nav-link p-0 text-muted"
                     >Galeria</a
                   >
                 </li>
                 <li class="nav-item mb-2">
-                  <a href="Nosotros.html" class="nav-link p-0 text-muted"
+                  <a
+                    href="/ProyectoFinalCoderHouse/Pages/nosotros.html"
+                    class="nav-link p-0 text-muted"
                     >Nosotros</a
                   >
                 </li>
                 <li class="nav-item mb-2">
-                  <a href="Contacto.html" class="nav-link p-0 text-muted"
+                  <a
+                    href="/ProyectoFinalCoderHouse/Pages/contacto.html"
+                    class="nav-link p-0 text-muted"
                     >Contacto</a
                   >
                 </li>
