--- a/Pages/galeria.html
+++ b/Pages/galeria.html
@@ -4,11 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="../JS/bootstrap.js"></script>
+    <script src="/ProyectoFinalCoderHouse/JS/bootstrap.js"></script>
     <title>AZCatering</title>
-    <link rel="shortcut icon" href="../Fotos/AZ.png" type="image/x-icon" />
-    <link rel="stylesheet" href="../css/bootstrap.css" />
-    <link rel="stylesheet" href="../css/style.css" />
+    <link
+      rel="shortcut icon"
+      href="/ProyectoFinalCoderHouse/Fotos/AZ.png"
+      type="image/x-icon"
+    />
+    <link rel="stylesheet" href="/ProyectoFinalCoderHouse/css/bootstrap.css" />
+    <link rel="stylesheet" href="/ProyectoFinalCoderHouse/css/style.css" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css"
@@ -21,7 +25,9 @@
       <div class="col-md">
         <nav class="navbar navbar-expand-md bg-light">
           <div class="container-fluid">
-            <a href="/"><img class="logonav" src="../Fotos/AZ.png" alt="" /></a>
+            <a href="/ProyectoFinalCoderHouse/"
+              ><img class="logonav" src="/ProyectoFinalCoderHouse/Fotos/AZ.png" alt=""
+            /></a>
             <button
               class="navbar-toggler"
               type="button"
@@ -39,16 +45,32 @@
                   <a class="nav-link" href="/">Inicio </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/Pages/servicios.html">Servicios</a>
+                  <a
+                    class="nav-link"
+                    href="/ProyectoFinalCoderHouse/Pages/servicios.html"
+                    >Servicios</a
+                  >
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/Pages/galeria.html">Galeria</a>
+                  <a
+                    class="nav-link"
+                    href="/ProyectoFinalCoderHouse/Pages/galeria.html"
+                    >Galeria</a
+                  >
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/Pages/nosotros.html">Nosotros</a>
+                  <a
+                    class="nav-link"
+                    href="/ProyectoFinalCoderHouse/Pages/nosotros.html"
+                    >Nosotros</a
+                  >
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/Pages/contacto.html">Contacto</a>
+                  <a
+                    class="nav-link"
+                    href="/ProyectoFinalCoderHouse/Pages/contacto.html"
+                    >Contacto</a
+                  >
                 </li>
               </ul>
             </div>
@@ -72,88 +94,88 @@
             <div class="row align-items-center">
               <div class="col-md-3 col-6">
                   <div class="gallery-photo">
-                      <img class="img-thumbnail" src="../Fotos/Fotos Galeria/Galeria 13.jpg" alt="">
+                      <img class="img-thumbnail" src="/ProyectoFinalCoderHouse/Fotos/Fotos Galeria/Galeria 13.jpg" alt="">
                   </div>
               </div>
               <div class="col-md-3 col-6">
                   <div class="gallery-photo">
-                      <img class="img-thumbnail" src="../Fotos/Fotos Galeria/Galeria 14.jpg" alt="">
+                      <img class="img-thumbnail" src="/ProyectoFinalCoderHouse/Fotos/Fotos Galeria/Galeria 14.jpg" alt="">
                   </div>
               </div>
               <div class="col-md-3 col-6">
                   <div class="gallery-photo">
-                      <img class="img-thumbnail" src="../Fotos/Fotos Galeria/Galeria 15.jpg" alt="">
+                      <img class="img-thumbnail" src="/ProyectoFinalCoderHouse/Fotos/Fotos Galeria/Galeria 15.jpg" alt="">
                   </div>
               </div>
               <div class="col-md-3 col-6">
                   <div class="gallery-photo">
-                      <img class="img-thumbnail" src="../Fotos/Fotos Galeria/Galeria 16.jpg" alt="">
-                  </div>
-              </div>
-            </div>
-            <div class="row align-items-center">
-              <div class="col-md-3 col-6">
-                  <div class="gallery-photo">
-                      <img class="img-thumbnail" src="../Fotos/Fotos Galeria/Galeria 1 (1).jpg" alt="">
-                  </div>
-              </div>
-              <div class="col-md-3 col-6">
-                  <div class="gallery-photo">
-                      <img class="img-thumbnail" src="../Fotos/Fotos Galeria/Galeria 2.jpg" alt="">
-                  </div>
-              </div>
-              <div class="col-md-3 col-6">
-                  <div class="gallery-photo">
-                      <img class="img-thumbnail" src="../Fotos/Fotos Galeria/Galeria 3.jpg" alt="">
-                  </div>
-              </div>
-              <div class="col-md-3 col-6">
-                  <div class="gallery-photo">
-                      <img class="img-thumbnail" src="../Fotos/Fotos Galeria/Galeria 4.jpg" alt="">
+                      <img class="img-thumbnail" src="/ProyectoFinalCoderHouse/Fotos/Fotos Galeria/Galeria 16.jpg" alt="">
                   </div>
               </div>
             </div>
             <div class="row align-items-center">
               <div class="col-md-3 col-6">
                   <div class="gallery-photo">
-                      <img class="img-thumbnail" src="../Fotos/Fotos Galeria/Galeria 5.jpg" alt="">
+                      <img class="img-thumbnail" src="/ProyectoFinalCoderHouse/Fotos/Fotos Galeria/Galeria 1 (1).jpg" alt="">
                   </div>
               </div>
               <div class="col-md-3 col-6">
                   <div class="gallery-photo">
-                      <img class="img-thumbnail" src="../Fotos/Fotos Galeria/Galeria 6.jpg" alt="">
+                      <img class="img-thumbnail" src="/ProyectoFinalCoderHouse/Fotos/Fotos Galeria/Galeria 2.jpg" alt="">
                   </div>
               </div>
               <div class="col-md-3 col-6">
                   <div class="gallery-photo">
-                      <img class="img-thumbnail" src="../Fotos/Fotos Galeria/Galeria 7.jpg" alt="">
+                      <img class="img-thumbnail" src="/ProyectoFinalCoderHouse/Fotos/Fotos Galeria/Galeria 3.jpg" alt="">
                   </div>
               </div>
               <div class="col-md-3 col-6">
                   <div class="gallery-photo">
-                      <img class="img-thumbnail" src="../Fotos/Fotos Galeria/Galeria 8.jpg" alt="">
+                      <img class="img-thumbnail" src="/ProyectoFinalCoderHouse/Fotos/Fotos Galeria/Galeria 4.jpg" alt="">
                   </div>
               </div>
             </div>
             <div class="row align-items-center">
               <div class="col-md-3 col-6">
                   <div class="gallery-photo">
-                      <img class="img-thumbnail" src="../Fotos/Fotos Galeria/Galeria 9.jpg" alt="">
+                      <img class="img-thumbnail" src="/ProyectoFinalCoderHouse/Fotos/Fotos Galeria/Galeria 5.jpg" alt="">
                   </div>
               </div>
               <div class="col-md-3 col-6">
                   <div class="gallery-photo">
-                      <img class="img-thumbnail" src="../Fotos/Fotos Galeria/Galeria 10.jpg" alt="">
+                      <img class="img-thumbnail" src="/ProyectoFinalCoderHouse/Fotos/Fotos Galeria/Galeria 6.jpg" alt="">
                   </div>
               </div>
               <div class="col-md-3 col-6">
                   <div class="gallery-photo">
-                      <img class="img-thumbnail" src="../Fotos/Fotos Galeria/Galeria 11.jpg" alt="">
+                      <img class="img-thumbnail" src="/ProyectoFinalCoderHouse/Fotos/Fotos Galeria/Galeria 7.jpg" alt="">
                   </div>
               </div>
               <div class="col-md-3 col-6">
                   <div class="gallery-photo">
-                      <img class="img-thumbnail" src="../Fotos/Fotos Galeria/Galeria 12.jpg" alt="">
+                      <img class="img-thumbnail" src="/ProyectoFinalCoderHouse/Fotos/Fotos Galeria/Galeria 8.jpg" alt="">
+                  </div>
+              </div>
+            </div>
+            <div class="row align-items-center">
+              <div class="col-md-3 col-6">
+                  <div class="gallery-photo">
+                      <img class="img-thumbnail" src="/ProyectoFinalCoderHouse/Fotos/Fotos Galeria/Galeria 9.jpg" alt="">
+                  </div>
+              </div>
+              <div class="col-md-3 col-6">
+                  <div class="gallery-photo">
+                      <img class="img-thumbnail" src="/ProyectoFinalCoderHouse/Fotos/Fotos Galeria/Galeria 10.jpg" alt="">
+                  </div>
+              </div>
+              <div class="col-md-3 col-6">
+                  <div class="gallery-photo">
+                      <img class="img-thumbnail" src="/ProyectoFinalCoderHouse/Fotos/Fotos Galeria/Galeria 11.jpg" alt="">
+                  </div>
+              </div>
+              <div class="col-md-3 col-6">
+                  <div class="gallery-photo">
+                      <img class="img-thumbnail" src="/ProyectoFinalCoderHouse/Fotos/Fotos Galeria/Galeria 12.jpg" alt="">
                   </div>
               </div>
             </div>
@@ -176,27 +198,33 @@
             <div class="col-6 col-md-2 mb-3">
               <ul class="nav flex-column">
                 <li class="nav-item mb-2">
-                  <a href="../index.html" class="nav-link p-0 text-muted"
-                    >Inicio</a
-                  >
+                  <a href="/" class="nav-link p-0 text-muted">Inicio</a>
                 </li>
                 <li class="nav-item mb-2">
-                  <a href="Servicios.html" class="nav-link p-0 text-muted"
+                  <a
+                    href="/ProyectoFinalCoderHouse/Pages/servicios.html"
+                    class="nav-link p-0 text-muted"
                     >Servicios</a
                   >
                 </li>
                 <li class="nav-item mb-2">
-                  <a href="Galeria.html" class="nav-link p-0 text-muted"
+                  <a
+                    href="/ProyectoFinalCoderHouse/Pages/galeria.html"
+                    class="nav-link p-0 text-muted"
                     >Galeria</a
                   >
                 </li>
                 <li class="nav-item mb-2">
-                  <a href="Nosotros.html" class="nav-link p-0 text-muted"
+                  <a
+                    href="/ProyectoFinalCoderHouse/Pages/nosotros.html"
+                    class="nav-link p-0 text-muted"
                     >Nosotros</a
                   >
                 </li>
                 <li class="nav-item mb-2">
-                  <a href="Contacto.html" class="nav-link p-0 text-muted"
+                  <a
+                    href="/ProyectoFinalCoderHouse/Pages/contacto.html"
+                    class="nav-link p-0 text-muted"
                     >Contacto</a
                   >
                 </li>
