--- a/Pages/servicios.html
+++ b/Pages/servicios.html
@@ -45,7 +45,9 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav">
                 <li class="nav-item">
-                  <a class="nav-link" href="/">Inicio </a>
+                  <a class="nav-link" href="/ProyectoFinalCoderHouse/index.html"
+                    >Inicio
+                  </a>
                 </li>
                 <li class="nav-item">
                   <a
