--- a/Pages/contacto.html
+++ b/Pages/contacto.html
@@ -199,7 +199,9 @@
             <div class="col-6 col-md-2 mb-3">
               <ul class="nav flex-column">
                 <li class="nav-item mb-2">
-                  <a href="/" class="nav-link p-0 text-muted">Inicio</a>
+                  <a href="../index.html" class="nav-link p-0 text-muted"
+                    >Inicio</a
+                  >
                 </li>
                 <li class="nav-item mb-2">
                   <a
