--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav">
                 <li class="nav-item">
-                  <a class="nav-link" href="/">Inicio </a>
+                  <a class="nav-link" href="/ProyectoFinalCoderHouse/index.html"
+                    >Inicio
+                  </a>
                 </li>
                 <li class="nav-item">
                   <a
@@ -142,7 +144,7 @@
             <div class="col-6 col-md-2 mb-3">
               <ul class="nav flex-column">
                 <li class="nav-item mb-2">
-                  <a href="/" class="nav-link p-0 text-muted">Inicio</a>
+                  <a href="#" class="nav-link p-0 text-muted">Inicio</a>
                 </li>
                 <li class="nav-item mb-2">
                   <a
