--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
       href="/ProyectoFinalCoderHouse/Fotos/AZ.png"
       type="image/x-icon"
     />
-    <link rel="stylesheet" href="/ProyectoFinalCoderHouse/css/bootstrap.css" />
-    <link rel="stylesheet" href="/ProyectoFinalCoderHouse/css/style.css" />
+    <link
+      rel="stylesheet"
+      href="/ProyectoFinalCoderHouse/style/bootstrap.css"
+    />
+    <link rel="stylesheet" href="/ProyectoFinalCoderHouse/style/style.css" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css"
@@ -21,7 +24,7 @@
 
   <body>
     <!--Comienzo NavBar-->
-    <header>
+    <header class="head">
       <div class="col-md">
         <nav class="navbar navbar-expand-md bg-light">
           <div class="container-fluid">
@@ -108,6 +111,20 @@
             <div class="carousel-item">
               <img
                 src="/ProyectoFinalCoderHouse/Fotos/Foto Carro 3.jpg"
+                class="d-block w-100"
+                alt="..."
+              />
+            </div>
+            <div class="carousel-item">
+              <img
+                src="/ProyectoFinalCoderHouse/Fotos/Foto Carro 4.jpg"
+                class="d-block w-100"
+                alt="..."
+              />
+            </div>
+            <div class="carousel-item">
+              <img
+                src="/ProyectoFinalCoderHouse/Fotos/Foto Carro 5.jpg"
                 class="d-block w-100"
                 alt="..."
               />
