--- a/Pages/contacto.html
+++ b/Pages/contacto.html
@@ -11,8 +11,11 @@
       href="/ProyectoFinalCoderHouse/Fotos/AZ.png"
       type="image/x-icon"
     />
-    <link rel="stylesheet" href="/ProyectoFinalCoderHouse/css/bootstrap.css" />
-    <link rel="stylesheet" href="/ProyectoFinalCoderHouse/css/style.css" />
+    <link
+      rel="stylesheet"
+      href="/ProyectoFinalCoderHouse/style/bootstrap.css"
+    />
+    <link rel="stylesheet" href="/ProyectoFinalCoderHouse/style/style.css" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css"
