--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="/ProyectoFinalCoderHouse/JS/bootstrap.js"></script>
+    <meta
+      name="description"
+      content="Una Combinación Entre La Más Alta Cocina Y Un Ambiente Cálido. Catering para eventos empresariales. +30 Años De Experiencia. Empresa Familiar. Eventos Corporativos."
+    />
+    <meta
+      name="keywords"
+      content="catering eventos,catering,catering eventos corporativos,eat catering,servicio de catering,catering para cumpleaños,catering gourmet,buenos aires catering,catering buenos aires,servicio de catering para eventos,catering para 10 personas,finger foods catering"
+    />
     <title>AZCatering</title>
     <link
       rel="shortcut icon"
