Agrego contenido en nosotros

--- a/Pages/nosotros.html
+++ b/Pages/nosotros.html
@@ -102,6 +102,35 @@
         <div class="row">
           <div class="col">
             <div class="text-center mb-4">
+              <h1>Nosotros</h1>
+            </div>
+            <div class="col-md-6 col-12">
+              <p class="parrafop" style="float: left">
+                Pensamos el catering como un momento especial. Una combinación
+                entre la más alta cocina y un ambiente cálido, donde la
+                vanguardia es el componente principal. En AZCatering,
+                gastronomía y diseño van juntos, porque preparar platos es
+                también crear entornos. En más de 30 años de experiencia en
+                catering, nuestra meta siguió siendo siempre la misma:
+                renovarnos permanentemente y pensar día a día en nuevas y
+                mejores propuestas para que cada servicio que hacemos no sea uno
+                más, sino uno mejor. Más de una receta, y un solo secreto: la
+                calidez, la confianza y el amor que solo puede brindar una
+                empresa familiar. Contamos con una amplia trayectoria en la
+                realización de bodas, fiestas de 15, Bat o Bar Mitzvá,
+                bautismos, comuniones, cumpleaños, aniversarios y todo tipo de
+                eventos sociales.Ofrecemos una múltiples de opciones de eventos
+                empresariales, congresos, seminarios, lanzamientos de productos,
+                desfiles, cocktails, lunchs, almuerzos y cenas formales,
+                jornadas laborales, coffees y desayunos de trabajo, entre otros.
+                Valoramos la importancia de estos encuentros para hacer crecer
+                proyectos, generar lazos y fortalecer equipos.
+              </p>
+            </div>
+            <div class="row align-items-center col-md-6 col-12">
+              <img src="../Fotos/Fotos Galeria/Galeria 15.jpg" alt="" />
+            </div>
+            <div class="text-center mb-4">
               <h1>Nuestro Equipo</h1>
             </div>
           </div>
@@ -123,8 +152,6 @@
               </div>
             </div>
           </div>
-          <!-- end feature item -->
-
           <div class="col-md-3 col-12">
             <div class="feature feature-4">
               <img
