linkeo redes del footer

--- a/Pages/servicios.html
+++ b/Pages/servicios.html
@@ -194,9 +194,7 @@
             <div class="col-6 col-md-2 mb-3">
               <ul class="nav flex-column">
                 <li class="nav-item mb-2">
-                  <a href="../index.html" class="nav-link p-0 text-muted"
-                    >Inicio</a
-                  >
+                  <a href="#" class="nav-link p-0 text-muted">Inicio</a>
                 </li>
                 <li class="nav-item mb-2">
                   <a
@@ -255,17 +253,17 @@
             <p>© 2022 Company, Inc. All rights reserved.</p>
             <ul class="list-unstyled d-flex">
               <li class="ms-3">
-                <a class="link-dark" href="#">
+                <a class="link-dark" href="https://es-la.facebook.com/">
                   <i class="bi bi-facebook"></i>
                 </a>
               </li>
               <li class="ms-3">
-                <a class="link-dark" href="#">
+                <a class="link-dark" href="https://www.instagram.com/">
                   <i class="bi bi-instagram"></i>
                 </a>
               </li>
               <li class="ms-3">
-                <a class="link-dark" href="#">
+                <a class="link-dark" href="https://twitter.com/?lang=es">
                   <i class="bi bi-twitter"></i>
                 </a>
               </li>
