--- a/index.html
+++ b/index.html
@@ -228,17 +228,17 @@
             <p>© 2022 Company, Inc. All rights reserved.</p>
             <ul class="list-unstyled d-flex">
               <li class="ms-3">
-                <a class="link-dark" href="#">
+                <a class="link-dark" href="https://es-la.facebook.com/">
                   <i class="bi bi-facebook"></i>
                 </a>
               </li>
               <li class="ms-3">
-                <a class="link-dark" href="#">
+                <a class="link-dark" href="https://www.instagram.com/">
                   <i class="bi bi-instagram"></i>
                 </a>
               </li>
               <li class="ms-3">
-                <a class="link-dark" href="#">
+                <a class="link-dark" href="https://twitter.com/?lang=es">
                   <i class="bi bi-twitter"></i>
                 </a>
               </li>
