--- a/Pages/galeria.html
+++ b/Pages/galeria.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="/ProyectoFinalCoderHouse/JS/jquery-3.6.0.min.js"></script>
     <script src="/ProyectoFinalCoderHouse/JS/bootstrap.js"></script>
+    <script src="/ProyectoFinalCoderHouse/JS/app.js"></script>
     <meta
       name="description"
       content="Una Combinación Entre La Más Alta Cocina Y Un Ambiente Cálido. Catering para eventos empresariales. +30 Años De Experiencia. Empresa Familiar. Eventos Corporativos."
@@ -103,90 +105,90 @@
                 </div>
             </div>
             <div class="row align-items-center">
-              <div class="col-md-3 col-6">
+              <div class="col-md-3 col-6 mb-2">
                   <div class="gallery-photo">
-                      <img class="img-thumbnail" src="/ProyectoFinalCoderHouse/Fotos/Fotos Galeria/Galeria 13.jpg" alt="">
+                      <img class="img-thumbnail" src="/ProyectoFinalCoderHouse/Fotos/Fotos Galeria/Galeria13.jpg" alt="">
                   </div>
               </div>
-              <div class="col-md-3 col-6">
+              <div class="col-md-3 col-6 mb-2">
                   <div class="gallery-photo">
-                      <img class="img-thumbnail" src="/ProyectoFinalCoderHouse/Fotos/Fotos Galeria/Galeria 14.jpg" alt="">
+                      <img class="img-thumbnail" src="/ProyectoFinalCoderHouse/Fotos/Fotos Galeria/Galeria14.jpg" alt="">
                   </div>
               </div>
-              <div class="col-md-3 col-6">
+              <div class="col-md-3 col-6 mb-2">
                   <div class="gallery-photo">
-                      <img class="img-thumbnail" src="/ProyectoFinalCoderHouse/Fotos/Fotos Galeria/Galeria 15.jpg" alt="">
+                      <img class="img-thumbnail" src="/ProyectoFinalCoderHouse/Fotos/Fotos Galeria/Galeria15.jpg" alt="">
                   </div>
               </div>
-              <div class="col-md-3 col-6">
+              <div class="col-md-3 col-6 mb-2">
                   <div class="gallery-photo">
-                      <img class="img-thumbnail" src="/ProyectoFinalCoderHouse/Fotos/Fotos Galeria/Galeria 16.jpg" alt="">
-                  </div>
-              </div>
-            </div>
-            <div class="row align-items-center">
-              <div class="col-md-3 col-6">
-                  <div class="gallery-photo">
-                      <img class="img-thumbnail" src="/ProyectoFinalCoderHouse/Fotos/Fotos Galeria/Galeria 1 (1).jpg" alt="">
-                  </div>
-              </div>
-              <div class="col-md-3 col-6">
-                  <div class="gallery-photo">
-                      <img class="img-thumbnail" src="/ProyectoFinalCoderHouse/Fotos/Fotos Galeria/Galeria 2.jpg" alt="">
-                  </div>
-              </div>
-              <div class="col-md-3 col-6">
-                  <div class="gallery-photo">
-                      <img class="img-thumbnail" src="/ProyectoFinalCoderHouse/Fotos/Fotos Galeria/Galeria 3.jpg" alt="">
-                  </div>
-              </div>
-              <div class="col-md-3 col-6">
-                  <div class="gallery-photo">
-                      <img class="img-thumbnail" src="/ProyectoFinalCoderHouse/Fotos/Fotos Galeria/Galeria 4.jpg" alt="">
+                      <img class="img-thumbnail" src="/ProyectoFinalCoderHouse/Fotos/Fotos Galeria/Galeria16.jpg" alt="">
                   </div>
               </div>
             </div>
             <div class="row align-items-center">
-              <div class="col-md-3 col-6">
+              <div class="col-md-3 col-6 mb-2">
                   <div class="gallery-photo">
-                      <img class="img-thumbnail" src="/ProyectoFinalCoderHouse/Fotos/Fotos Galeria/Galeria 5.jpg" alt="">
+                      <img class="img-thumbnail" src="/ProyectoFinalCoderHouse/Fotos/Fotos Galeria/Galeria1.jpg" alt="">
                   </div>
               </div>
-              <div class="col-md-3 col-6">
+              <div class="col-md-3 col-6 mb-2">
                   <div class="gallery-photo">
-                      <img class="img-thumbnail" src="/ProyectoFinalCoderHouse/Fotos/Fotos Galeria/Galeria 6.jpg" alt="">
+                      <img class="img-thumbnail" src="/ProyectoFinalCoderHouse/Fotos/Fotos Galeria/Galeria2.jpg" alt="">
                   </div>
               </div>
-              <div class="col-md-3 col-6">
+              <div class="col-md-3 col-6 mb-2">
                   <div class="gallery-photo">
-                      <img class="img-thumbnail" src="/ProyectoFinalCoderHouse/Fotos/Fotos Galeria/Galeria 7.jpg" alt="">
+                      <img class="img-thumbnail" src="/ProyectoFinalCoderHouse/Fotos/Fotos Galeria/Galeria3.jpg" alt="">
                   </div>
               </div>
-              <div class="col-md-3 col-6">
+              <div class="col-md-3 col-6 mb-2">
                   <div class="gallery-photo">
-                      <img class="img-thumbnail" src="/ProyectoFinalCoderHouse/Fotos/Fotos Galeria/Galeria 8.jpg" alt="">
+                      <img class="img-thumbnail" src="/ProyectoFinalCoderHouse/Fotos/Fotos Galeria/Galeria4.jpg" alt="">
                   </div>
               </div>
             </div>
             <div class="row align-items-center">
-              <div class="col-md-3 col-6">
+              <div class="col-md-3 col-6 mb-2">
                   <div class="gallery-photo">
-                      <img class="img-thumbnail" src="/ProyectoFinalCoderHouse/Fotos/Fotos Galeria/Galeria 9.jpg" alt="">
+                      <img class="img-thumbnail" src="/ProyectoFinalCoderHouse/Fotos/Fotos Galeria/Galeria5.jpg" alt="">
                   </div>
               </div>
-              <div class="col-md-3 col-6">
+              <div class="col-md-3 col-6 mb-2">
                   <div class="gallery-photo">
-                      <img class="img-thumbnail" src="/ProyectoFinalCoderHouse/Fotos/Fotos Galeria/Galeria 10.jpg" alt="">
+                      <img class="img-thumbnail" src="/ProyectoFinalCoderHouse/Fotos/Fotos Galeria/Galeria6.jpg" alt="">
                   </div>
               </div>
-              <div class="col-md-3 col-6">
+              <div class="col-md-3 col-6 mb-2">
                   <div class="gallery-photo">
-                      <img class="img-thumbnail" src="/ProyectoFinalCoderHouse/Fotos/Fotos Galeria/Galeria 11.jpg" alt="">
+                      <img class="img-thumbnail" src="/ProyectoFinalCoderHouse/Fotos/Fotos Galeria/Galeria7.jpg" alt="">
                   </div>
               </div>
-              <div class="col-md-3 col-6">
+              <div class="col-md-3 col-6 mb-2">
                   <div class="gallery-photo">
-                      <img class="img-thumbnail" src="/ProyectoFinalCoderHouse/Fotos/Fotos Galeria/Galeria 12.jpg" alt="">
+                      <img class="img-thumbnail" src="/ProyectoFinalCoderHouse/Fotos/Fotos Galeria/Galeria8.jpg" alt="">
+                  </div>
+              </div>
+            </div>
+            <div class="row align-items-center">
+              <div class="col-md-3 col-6 mb-2">
+                  <div class="gallery-photo">
+                      <img class="img-thumbnail" src="/ProyectoFinalCoderHouse/Fotos/Fotos Galeria/Galeria9.jpg" alt="">
+                  </div>
+              </div>
+              <div class="col-md-3 col-6 mb-2">
+                  <div class="gallery-photo">
+                      <img class="img-thumbnail" src="/ProyectoFinalCoderHouse/Fotos/Fotos Galeria/Galeria10.jpg" alt="">
+                  </div>
+              </div>
+              <div class="col-md-3 col-6 mb-2">
+                  <div class="gallery-photo">
+                      <img class="img-thumbnail" src="/ProyectoFinalCoderHouse/Fotos/Fotos Galeria/Galeria11.jpg" alt="">
+                  </div>
+              </div>
+              <div class="col-md-3 col-6 mb-2">
+                  <div class="gallery-photo">
+                      <img class="img-thumbnail" src="/ProyectoFinalCoderHouse/Fotos/Fotos Galeria/Galeria12.jpg" alt="">
                   </div>
               </div>
             </div>
@@ -287,6 +289,34 @@
         </footer>
       </div>
     </section>
+    <div class="modal fade p-0" id="galleryModal" tabindex="-1" aria-labelledby="galleryModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-fullscreen m-0">
+          <div class="modal-content">
+              <div class="modal-header p-2">
+                  <h5 class="modal-title" id="galleryModalLabel">Galería</h5>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              </div>
+              <div class="modal-body p-0">
+                  <div class="row align-items-start m-0">
+                      <div class="col p-0">
+                          <div id="carouselGallery" class="carousel slide" data-bs-interval="false">
+                              <div class="carousel-indicators fixed-bottom p-0"></div>
+                              <div class="carousel-inner"></div>
+                              <a class="carousel-control-prev" data-bs-target="#carouselGallery" data-bs-slide="prev">
+                                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                  <span class="visually-hidden">Anterior</span>
+                              </a>
+                              <a class="carousel-control-next" data-bs-target="#carouselGallery" data-bs-slide="next">
+                                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                  <span class="visually-hidden">Siguiente</span>
+                              </a>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </div>
     <!--Termino Footer-->
   </body>
 </html>
