--- a/Pages/nosotros.html
+++ b/Pages/nosotros.html
@@ -104,108 +104,116 @@
             <div class="text-center mb-4">
               <h1>Nosotros</h1>
             </div>
-            <div class="col-md-6 col-12">
-              <p class="parrafop" style="float: left">
-                Pensamos el catering como un momento especial. Una combinación
-                entre la más alta cocina y un ambiente cálido, donde la
-                vanguardia es el componente principal. En AZCatering,
-                gastronomía y diseño van juntos, porque preparar platos es
-                también crear entornos. En más de 30 años de experiencia en
-                catering, nuestra meta siguió siendo siempre la misma:
-                renovarnos permanentemente y pensar día a día en nuevas y
-                mejores propuestas para que cada servicio que hacemos no sea uno
-                más, sino uno mejor. Más de una receta, y un solo secreto: la
-                calidez, la confianza y el amor que solo puede brindar una
-                empresa familiar. Contamos con una amplia trayectoria en la
-                realización de bodas, fiestas de 15, Bat o Bar Mitzvá,
-                bautismos, comuniones, cumpleaños, aniversarios y todo tipo de
-                eventos sociales.Ofrecemos una múltiples de opciones de eventos
-                empresariales, congresos, seminarios, lanzamientos de productos,
-                desfiles, cocktails, lunchs, almuerzos y cenas formales,
-                jornadas laborales, coffees y desayunos de trabajo, entre otros.
-                Valoramos la importancia de estos encuentros para hacer crecer
-                proyectos, generar lazos y fortalecer equipos.
-              </p>
-            </div>
-            <div class="row align-items-center col-md-6 col-12">
-              <img src="../Fotos/Fotos Galeria/Galeria 15.jpg" alt="" />
-            </div>
-            <div class="text-center mb-4">
-              <h1>Nuestro Equipo</h1>
+          </div>
+        </div>
+        <div class="row align-items-center">
+          <div class="col-md-6 col-12">
+            <h3><strong>AZCatering</strong></h3>
+            <p class="parrafop" style="float: left">
+              Pensamos el catering como un momento especial. Una combinación
+              entre la más alta cocina y un ambiente cálido, donde la
+              vanguardia es el componente principal. En AZCatering,
+              gastronomía y diseño van juntos, porque preparar platos es
+              también crear entornos. En más de 30 años de experiencia en
+              catering, nuestra meta siguió siendo siempre la misma:
+              renovarnos permanentemente y pensar día a día en nuevas y
+              mejores propuestas para que cada servicio que hacemos no sea
+              uno más, sino uno mejor. Más de una receta, y un solo secreto:
+              la calidez, la confianza y el amor que solo puede brindar una
+              empresa familiar. Contamos con una amplia trayectoria en la
+              realización de bodas, fiestas de 15, Bat o Bar Mitzvá,
+              bautismos, comuniones, cumpleaños, aniversarios y todo tipo de
+              eventos sociales.Ofrecemos una múltiples de opciones de
+              eventos empresariales, congresos, seminarios, lanzamientos de
+              productos, desfiles, cocktails, lunchs, almuerzos y cenas
+              formales, jornadas laborales, coffees y desayunos de trabajo,
+              entre otros. Valoramos la importancia de estos encuentros para
+              hacer crecer proyectos, generar lazos y fortalecer equipos.
+            </p>
+          </div>
+          <div class="col-md-6 col-12">
+            <img class="d-block w-100" src="../Fotos/Fotos Galeria/Galeria15.jpg" alt="" />
+          </div>
+        </div>
+      </div>
+      <div class="row mt-3">
+        <div class="col">
+          <div class="text-center mb-4">
+            <h1>Nuestro Equipo</h1>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-3 col-12">
+          <div class="feature feature-4">
+            <img
+              src="/ProyectoFinalCoderHouse/Fotos/Team/nuestro-equipo-ok-1.png"
+              alt=""
+              class="feature-img img-full-width"
+            />
+            <div class="feature-text text-center">
+              <h3 class="feature-title">
+                Paula<br />
+                Correa
+              </h3>
+              <p>Directora</p>
             </div>
           </div>
         </div>
-        <div class="row">
-          <div class="col-md-3 col-12">
-            <div class="feature feature-4">
-              <img
-                src="/ProyectoFinalCoderHouse/Fotos/Team/nuestro-equipo-ok-1.png"
-                alt=""
-                class="feature-img img-full-width"
-              />
-              <div class="feature-text text-center">
-                <h3 class="feature-title">
-                  Paula<br />
-                  Correa
-                </h3>
-                <p>Directora</p>
-              </div>
+        <div class="col-md-3 col-12">
+          <div class="feature feature-4">
+            <img
+              src="/ProyectoFinalCoderHouse/Fotos/Team/nuestro-equipo-ok-2.png"
+              alt=""
+              class="feature-img img-full-width"
+            />
+            <div class="feature-text text-center">
+              <h3 class="feature-title">
+                Julieta<br />
+                Cardella
+              </h3>
+              <p>Gerente General</p>
             </div>
           </div>
-          <div class="col-md-3 col-12">
-            <div class="feature feature-4">
-              <img
-                src="/ProyectoFinalCoderHouse/Fotos/Team/nuestro-equipo-ok-2.png"
-                alt=""
-                class="feature-img img-full-width"
-              />
-              <div class="feature-text text-center">
-                <h3 class="feature-title">
-                  Julieta<br />
-                  Cardella
-                </h3>
-                <p>Gerente General</p>
-              </div>
-            </div>
-          </div>
-          <!-- end feature item -->
-
-          <div class="col-md-3 col-12">
-            <div class="feature feature-4">
-              <img
-                src="/ProyectoFinalCoderHouse/Fotos/Team/nuestro-equipo-ok-3.png"
-                alt=""
-                class="feature-img img-full-width"
-              />
-              <div class="feature-text text-center">
-                <h3 class="feature-title">
-                  Santiago<br />
-                  Curutchet
-                </h3>
-                <p>Ejecutivo de Cuentas</p>
-              </div>
-            </div>
-          </div>
-          <!-- end feature item -->
-
-          <div class="col-md-3 col-12">
-            <div class="feature feature-4">
-              <img
-                src="/ProyectoFinalCoderHouse/Fotos/Team/nuestro-equipo-ok-4.png"
-                alt=""
-                class="feature-img img-full-width"
-              />
-              <div class="feature-text text-center">
-                <h3 class="feature-title">
-                  Alejandro<br />
-                  Rodas
-                </h3>
-                <p>Chef</p>
-              </div>
-            </div>
-          </div>
-          <!-- end feature item -->
         </div>
+        <!-- end feature item -->
+
+        <div class="col-md-3 col-12">
+          <div class="feature feature-4">
+            <img
+              src="/ProyectoFinalCoderHouse/Fotos/Team/nuestro-equipo-ok-3.png"
+              alt=""
+              class="feature-img img-full-width"
+            />
+            <div class="feature-text text-center">
+              <h3 class="feature-title">
+                Santiago<br />
+                Curutchet
+              </h3>
+              <p>Ejecutivo de Cuentas</p>
+            </div>
+          </div>
+        </div>
+        <!-- end feature item -->
+
+        <div class="col-md-3 col-12">
+          <div class="feature feature-4">
+            <img
+              src="/ProyectoFinalCoderHouse/Fotos/Team/nuestro-equipo-ok-4.png"
+              alt=""
+              class="feature-img img-full-width"
+            />
+            <div class="feature-text text-center">
+              <h3 class="feature-title">
+                Alejandro<br />
+                Rodas
+              </h3>
+              <p>Chef</p>
+            </div>
+          </div>
+        </div>
+        <!-- end feature item -->
+      </div>
       </section>
     </main>
     <!--Termino Main-->
