--- a/Pages/contacto.html
+++ b/Pages/contacto.html
@@ -107,7 +107,7 @@
           </div>
         </div>
         <div class="row align-items-start">
-          <div class="col-12">
+          <div class="col-12 mb-2">
             <form>
               <div class="mb-3">
                 <label for="exampleInputEmail1" class="form-label"
