--- a/index.html
+++ b/index.html
@@ -105,35 +105,35 @@
             <div class="carousel-item active">
               <img
                 src="/ProyectoFinalCoderHouse/Fotos/Foto Carro 1.jpg"
-                class="d-block w-100"
+                class="d-block w-100 vh-100"
                 alt="..."
               />
             </div>
             <div class="carousel-item">
               <img
                 src="/ProyectoFinalCoderHouse/Fotos/Foto Carro 2.jpg"
-                class="d-block w-100"
+                class="d-block w-100 vh-100"
                 alt="..."
               />
             </div>
             <div class="carousel-item">
               <img
                 src="/ProyectoFinalCoderHouse/Fotos/Foto Carro 3.jpg"
-                class="d-block w-100"
+                class="d-block w-100 vh-100"
                 alt="..."
               />
             </div>
             <div class="carousel-item">
               <img
                 src="/ProyectoFinalCoderHouse/Fotos/Foto Carro 4.jpg"
-                class="d-block w-100"
+                class="d-block w-100 vh-100"
                 alt="..."
               />
             </div>
             <div class="carousel-item">
               <img
                 src="/ProyectoFinalCoderHouse/Fotos/Foto Carro 5.jpg"
-                class="d-block w-100"
+                class="d-block w-100 vh-100"
                 alt="..."
               />
             </div>
